discussion/kv_engine/163194/163194_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47318: Account for packet data when processed, but ACK on success

MB-47318 and the test code in this patch demonstrated that a buffered
delete can lead to an incorrect DCP buffer-acknowledgement, larger
than sent from the producer (MB-47318) or smaller (as found by extended
testing).

The issue occurs because as we process a DCP delete it may need the
value sanitising to handle past bugs - this means decompressing the
Item for inspection. If we then fail to store the delete and have to
buffer the Item, the AUXIO task when successful in storing the delete
will calculate the ACK based on the sanitised/decompressed Item -
this is now larger or smaller than the packet data.

The fix in this commit is to always account for the ACK size on the
'front-end' function - i.e. DcpConsumer:deletion using the
UpdateFlowControl object. This code is looking at the 'raw' network
data and can calculate the correct size. However UpdateFlowControl is
changed so that it will only ever trigger a buffer acknowledgement
when data is successfully stored. If data is buffered, the
notification to acknowledge is skipped. Now when the AUXIO buffering
task successfully stores the buffered items it can now trigger an
acknowledgement.

Change-Id: I1dea8e2dd355239bf9286a895c9ac5636fc1db0c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-07 13:03:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-07 13:10:49.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40892/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40892/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2886/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2886/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15139/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15139/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15732/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15732/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14868/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14868/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14016/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2925/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2925/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23159/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23159/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13269/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_dcp_consumer.cc:158:29: error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
            doc.value = cb::xattr::make_wire_encoded_string(value, xattrList);
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13269/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_dcp_consumer.cc:158:29:
error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13269/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12057/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
